    universally supported now).

* docutils/writers/html4css1/template.txt: Added to project.

* docutils/writers/pep_html/:

  - Moved template functionality to the HTML writer.

* docutils/writers/s5_html/__init__.py:

  - Added ``view_mode`` & ``hidden_controls`` settings
    (``--view-mode`` & ``--hidden-controls/--visible-controls``
    options).

* docutils/writers/latex2e/__init__.py:

  - New option ``--reference-label`` to allow usage of LaTeX ref for 
    labels in section references.
  - Add a label after every section to support sectionnumbers as reference
    labels.
  - Fix: bug# 1605376 rst2latex: bad options group list
  - Remove inactive code for use_optionlist_for_option_list.
  - Remove latex comments from option_list output.
  - Fix: bug# 1612270 double qoutes in italian literal.
  - Fix: output ``hypertarget{ node.get(refid) }{}`` from visit_target. 
  - Add option --use-latex-abstract.
  - Image width unit ``px`` is translated to ``pt``.
  - Add image height support.
  - Fix: image width ``70%`` is converted ``0.700\linewidth``.
    bug #1457388
  - Fix: Do not escape underscores in citation reference labels if
    use-latex-citations is set.
  - Use centering instead of center for figure contents, to avoid vertical
    space.
  - Recognize table class: borderless, nolines, booktabs, standard.
  - Fix: Renaming contents section does not work with latex writer; SF
    bug #1487405.
  - Applied patch for custom roles with classes from Edward Loper.
  - Fixed bug that caused crashes with more than 256 lists.

* docutils/writers/pep_html/__init__.py:

  - Changed to support new python.org website structure and
    pep2pyramid.py.

* docs/howto/security.txt: "Deploying Docutils Securely", added to
  project.

* tools/editors/emacs/rst.el:

  - Changed license to "GPL".
  - Added ``rst-straighten-decorations`` function.
  - The ``compile`` module is now always loaded.
  - Added ``rst-toggle-line-block`` function.